# bcrs

./: .gitignore  Cargo.toml  Makefile  README.md
db/: 0x0B22B89B85D804B8B951C8884A040EA2869BCF71  0x446E89D661D607868FBD8E881E6A15C3797AF140  0xE4DFEB6011C12A097190BBFBFF859979E2616AD0  genesis.json
db/node1/: block.db
db/node2/: block.db
db/node3/: block.db
src/: cmd.rs  errors.rs  http.rs  lib.rs  main.rs  mine.rs  node.rs  sync.rs
src/database/: block.rs  bstate.rs  mod.rs  purems.rs  state.rs  tx.rs
src/routes/: addpeer.rs  balancelist.rs  currstatus.rs  mod.rs  syncblocks.rs  txadd.rs
