[package]
name = "bcrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bcrs"
path = "src/lib.rs"
[[bin]]
name = "bcrs"
path = "src/main.rs"
[[bin]]
name = "cmd"
path = "src/cmd.rs"
[[bin]]
name = "abc"
path = "src/bin/abc.rs"
[[bin]]
name = "http"
path = "src/http.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
blake3 = "1.3.3"
clap={version='4',features=["derive"]}
config = "0.13"

log = "0.4.0"
env_logger = "0.9.0"
parking_lot = "0.12"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
