[package]
name = "bcrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bcrs"
path = "src/lib.rs"
[[bin]]
name = "bcrs"
path = "src/main.rs"
[[bin]]
name = "cmd"
path = "src/cmd.rs"
[[bin]]
name = "abc"
path = "src/bin/abc.rs"
[[bin]]
name = "wallet"
path = "src/bin/wallet.rs"

[[bin]]
name = "http"
path = "src/http.rs"
[[bin]]
name="vv"
path="src/bin/vv.rs"


[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6.11"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
blake3 = "1.3.3"
clap={version='4',features=["derive"]}
config = "0.13"

log = "0.4.0"
env_logger = "0.9.0"
parking_lot = "0.12"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4.24"
rand = "0.8.5"
secp256k1 = {version="0.27.0",features=["rand-std","serde","bitcoin-hashes-std","global-context","recovery"]}
eth-keystore = "0.5.0"
tiny-keccak = {version="2.0.2",features = ["sha3"]}
sha3 = "0.10.6"
rlp = "0.5.2"
ethereum-types = "0.14.1"
ureq={version="2.6.2",features=["json"]}

#size优化 https://stackoverflow.com/questions/29008127/why-are-rust-executables-so-huge

#[profile.release]
#opt-level = 'z'     # Optimize for size
#lto = true          # Enable link-time optimization
#codegen-units = 1   # Reduce number of codegen units to increase optimizations
#panic = 'abort'     # Abort on panic
#strip = true        # Strip symbols from binary*
